# AdventOfCode

./: .gitignore  pyproject.toml
11/: 1.py
14/: 1.py
15/: 1.py
16/: 1.py
17/: 1.py
18/: 1.py
19/: 1.py
2/: 1.py  2.py
2015/1/: 1.py
2016/1/: 1.py  2.py
2016/10/: 1.py
2016/11/: 1.py
2016/12/: 1.py
2016/13/: 1.py
2016/20/: 1.py
2016/22/: input.txt
2016/24/: 1.py
2016/25/: 1.py
2016/3/: 2.py
2016/4/: 1.py
2016/6/: 1.py
2016/7/: 1.py
2016/8/: 1.py
2017/1/: 1.py
2017/2/: 1.py
2022/1/: 1.py  2.py  common.py
2022/2/: 1.py  2.py  common.py
2022/3/: 1.py  2.py  common.py
2022/4/: 1.py  2.py  common.py
2023/1/: 1.py  2.py
2023/10/: 1.py  2.py  common.py
2023/11/: 1.py  2.py  common.py
2023/2/: 1.py  2.py  common.py
2023/3/: 1.py  2.py  common.py
2023/4/: 1.py  2.py  common.py
2023/5/: 1.py  2.py  common.py
2023/6/: 1.py  2.py  common.py
2023/7/: 1.py  2.py  common.py
2023/8/: 1.py  2.py  common.py
2023/9/: 1.py  2.py  common.py
2025/1/: 1.py  2.py
2025/2/: 1.py  2.py
2025/3/: 1.py  2.py
2025/4/: 1.py  2.py
2025/5/: 1.py  2.py
2025/6/: 1.py  2.py
2025/7/: 2.py
2025/8/: 1.py  2.py
21/: 1.py
22/: 1.py
23/: 1.py
3/: 1.py
4/: 2.py
5/: 1.py  2.py
6/: 1.py  2.py
7/: 2.py
9/: 1.py  2.py
common/: grids.py  input_data.py  iterables.py
