[tool.poetry]
name = "advent-of-code"
authors = ["Kris Harper <kris.p.harper@gmail.com"]
package-mode = false

[tool.poetry.dependencies]
python = "3.13.*"
more-itertools = "10.*"

[tool.poetry.group.dev.dependencies]
ruff = "<1.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C90", # mccabe
    "E",   # pycodestyle
    "W",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "PL",  # pylint
    "PD",  # pandas-vet
    "RUF", # ruff
    "UP",  # pyupgrade
]
ignore = [
    "PLR2004",  # allows comparison to "magic value" instead of constant variable
    "E731",  # allows assigning lambda to a variable
]

[tool.ruff.lint.isort]
known-local-folder = [
    "20*",
    "common"
]

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
check_untyped_defs = true
